# aoc-2023-solutions

day-1/src/: trebuchet.rs
day1/src/: main.rs
day2/: CHANGELOG.md  day2.cabal
day2/app/: Game.hs  Main.hs
day2/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
