cabal-version:      2.4
name:               day2
version:            0.1.0.0

author:             Jawad Ahmed
maintainer:         jawad.w.ahmed@gmail.com

executable day2
    main-is:          Main.hs

    other-modules:    Game

    other-extensions: LambdaCase
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   app
    default-language: Haskell2010
